# moavi-code-challenge

./: .dockerignore  .env.template  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
pharmacy/: settings.py  urls.py
pharmacy/core/: apps.py  models.py  urls.py  views.py
pharmacy/core/migrations/: 0001_initial.py
pharmacy/core/services/: chart_data.py  csv_importer.py  marking_listing.py
pharmacy/core/static/js/: chart.js  index.js  markings.js
pharmacy/core/templates/: chart.html  index.html  markings.html
pharmacy/core/templates/partials/: base.html  header.html
pharmacy/core/tests/: test_models.py  test_views.py
pharmacy/core/tests/services/: test_chart_data.py  test_csv_importer.py  test_marking_listing.py
pharmacy/core/tests/views/: test_chart_views.py  test_markings_views.py  test_upload_views.py
pharmacy/core/views/: base_views.py  chart_views.py  markings_views.py  upload_views.py
