[project]
name = "moavi-code-challenge"
version = "0.1.0"
description = ""
authors = [{ name = "Gustavo Oliveira", email = "gusta01.oliveira@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = []


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
